--- a/JavaScript/12.Cas/index.html
+++ b/JavaScript/12.Cas/index.html
@@ -11,12 +11,7 @@
     <img id="Img" src="audi1.png" />
     <script src="app.js"></script>
 
-    <p id="text2">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit ducimus
-      numquam totam debitis minima cupiditate molestiae voluptatibus?
-      Exercitationem expedita, quasi quos voluptatibus excepturi quas, ratione
-      recusandae atque tempore voluptas sapiente?
-    </p>
+    <p id="text2">When you click on button text will change color to blue.</p>
     <button onclick="changeColor()">Click me</button>
   </body>
 </html>
