Register and Login Form Validation

--- a/JavaScript/14.Cas/Login.html
+++ b/JavaScript/14.Cas/Login.html
@@ -10,11 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="Login.css" />
   </head>
   <body>
     <form id="login-form" method="post" action="/login">
-      <h1>Login</h1>
+      <h1>Login User</h1>
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required /><br /><br />
       <label for="psw">Password:</label>
