--- a/JavaScript/14.Cas/Register.html
+++ b/JavaScript/14.Cas/Register.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <form id="registration-form" onsubmit="return validate(); ">
+      <h1>Register User</h1>
       <label for="username">Name:</label>
       <input type="text" id="name" name="name" />
       <div id="name-error" class="error">Name field is empty</div>
