--- a/JavaScript/14.Cas/Login.html
+++ b/JavaScript/14.Cas/Login.html
@@ -13,32 +13,35 @@
     <link rel="stylesheet" href="Login.css" />
   </head>
   <body>
-    <form id="login-form" method="post" action="/login">
+    <form
+      id="login-form"
+      method="post"
+      action="/login"
+      onsubmit="return validate();"
+    >
       <h1>Login</h1>
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required /><br /><br />
-      <label for="psw">Password:</label>
+      <label for="password">Password:</label>
       <input
         type="password"
         class="form-control1"
-        id="psw"
+        id="password1"
         name="psw"
         pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
         title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-        required
       /><br /><br />
-      <label for="confirm-ps">Confirm Password:</label>
+      <label for="confirm-password">Confirm Password:</label>
       <input
         type="password"
         class="form-control2"
-        id="psw2"
+        id="password2"
         name="psw2"
         title="Password has to be same "
-        required
       />
       <br /><br />
       <input type="submit" value="Submit" />
     </form>
-    <script src="app.js"></script>
+    <script src="Login.js"></script>
   </body>
 </html>
