--- a/JavaScript/12.Cas/index.html
+++ b/JavaScript/12.Cas/index.html
@@ -8,11 +8,26 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 id="text1">Dvanaesti java script cas</h1>
+    <h1 id="text1">DOM Object</h1>
     <img id="Img" src="audi1.png" />
     <script src="app.js"></script>
 
     <p id="text2">When you click on button text will change color to blue.</p>
     <button onclick="changeColor()">Click me</button>
+
+    <p id="demo">Hello</p>
+    <script src="app.js"></script>
+    <li class="list-group-car" id="car1">Audi</li>
+    <li class="list-group-car" id="car2">Bmw</li>
+    <li class="list-group-car" id="car3">Mercedes</li>
+    <li class="list-group-car" id="car4">Golf</li>
+    <li class="list-group-car" id="car5">Land Rover</li>
+    <button onclick="myFunction()">Click me</button>
+
+    <p id="p"></p>
+    <h1>Prvi</h1>
+    <h2>Drugi</h2>
+    <h1>Prvi</h1>
+    <h2>Drugi</h2>
   </body>
 </html>
