Register and Login Form Validation

--- a/JavaScript/Validation/Home.html
+++ b/JavaScript/Validation/Home.html
@@ -7,6 +7,6 @@
     <title>Home page</title>
   </head>
   <body>
-    <h1>You have sucsesifully login to your page</h1>
+    <h1>You have successifully login to your page</h1>
   </body>
 </html>
