--- a/JavaScript/12.Cas/index.html
+++ b/JavaScript/12.Cas/index.html
@@ -24,6 +24,12 @@
     <li class="list-group-car" id="car5">Land Rover</li>
     <button onclick="myFunction()">Click me</button>
 
+    <form name="forma" onsubmit="validacija()">
+      Ime: <input type="text" name="first-name" />
+      <input type="submit" value="Submit" />
+      <script src="app.js"></script>
+    </form>
+
     <p id="p"></p>
     <h1>Prvi</h1>
     <h2>Drugi</h2>
