--- a/JavaScript/Validation/Login.html
+++ b/JavaScript/Validation/Login.html
@@ -13,24 +13,22 @@
     <link rel="stylesheet" href="Login.css" />
   </head>
   <body>
-    <form
-      id="login-form"
-      method="post"
-      action="/login"
-      onsubmit="return validate();"
-    >
+    <form id="login-form" onsubmit="return validate();">
       <h1>Login</h1>
       <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required /><br /><br />
+      <input type="text" id="username" name="username" />
+      <div id="name-error" class="error">Name field is empty</div>
+      <br /><br />
       <label for="password">Password:</label>
       <input
         type="password"
-        class="form-control1"
         id="password1"
-        name="psw"
+        name="password"
         pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
         title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-      /><br /><br />
+      />
+      <div id="password-error" class="error">Password is too short</div>
+      <br /><br />
       <label for="confirm-password">Confirm Password:</label>
       <input
         type="password"
@@ -39,6 +37,7 @@
         name="psw2"
         title="Password has to be same "
       />
+      <div id="cpassword-error" class="error">Passwords are not matching</div>
       <br /><br />
       <input type="submit" value="Submit" />
     </form>
