--- a/JavaScript/12.Cas/index.html
+++ b/JavaScript/12.Cas/index.html
@@ -30,10 +30,6 @@
       <script src="app.js"></script>
     </form>
 
-    <p id="p"></p>
-    <h1>Prvi</h1>
-    <h2>Drugi</h2>
-    <h1>Prvi</h1>
-    <h2>Drugi</h2>
+    <div id="container"></div>
   </body>
 </html>
