Register and Login Form Validation

--- a/JavaScript/Validation/Home.html
+++ b/JavaScript/Validation/Home.html
@@ -8,6 +8,7 @@
     <title>Home page</title>
   </head>
   <body>
+    <div id="particles-js"></div>
     <h1>You have successifully login to your page</h1>
     <button type="register">
       <a href="/JavaScript/Validation/Register.html">Register</a>
@@ -15,5 +16,7 @@
     <button type="login">
       <a href="/JavaScript/Validation/Login.html">Login</a>
     </button>
+    <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="Home.js"></script>
   </body>
 </html>
