--- a/JavaScript/Validation/Register.html
+++ b/JavaScript/Validation/Register.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="Register.css" />
     <title>Register Form</title>
   </head>
   <body>
+    <div id="particles-js"></div>
     <form id="registration-form" onsubmit="return validate(); ">
       <h1>Register User</h1>
       <label for="username">Name:</label>
@@ -58,6 +65,7 @@
       <br />
       <button type="submit" title="Click me to register ">Register</button>
     </form>
+    <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="Register.js"></script>
   </body>
 </html>
