--- a/JavaScript/Counter/Counter.html
+++ b/JavaScript/Counter/Counter.html
@@ -8,14 +8,16 @@
     <title>Counter</title>
   </head>
   <body>
-    <div id="particles-js"></div>
-    <div id="counter">
-      <h1>Counter</h1>
-      <p id="count">0</p>
-      <button class="allbtn" id="minus">Minus</button>
-      <button class="allbtn" id="reset">Reset</button>
-      <button class="allbtn" id="plus">Plus</button>
-    </div>
+    <center>
+      <div id="particles-js"></div>
+      <div id="counter">
+        <h1>Counter</h1>
+        <p id="count">0</p>
+        <button class="allbtn" id="minus">Minus</button>
+        <button class="allbtn" id="reset">Reset</button>
+        <button class="allbtn" id="plus">Plus</button>
+      </div>
+    </center>
     <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="Counter.js"></script>
   </body>
