--- a/JavaScript/Sidebar/index.html
+++ b/JavaScript/Sidebar/index.html
@@ -20,12 +20,20 @@
         <li><a href="">Project</a></li><br>
         <li><a href="">Contact</a></li><br>
       </ul>
+      <div class="footer_icons">
+      <a class="icons" href="https://www.facebook.com/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
+      <a class="icons" href="https://www.instagram.com/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+      <a class="icons" href="https://twitter.com/" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
+      <a class="icons" href="https://github.com/" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+      <a class="icons" href="https://www.google.com/" target="_blank"><ion-icon name="logo-google"></ion-icon></a>
+      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+      </div>
     </div>
-    <div class="main">
+    <div class="right">
         <div class="right-sidebar">
           <button class="btn_open" onclick="btn_open()">&#9776;</button>
-
-          <div class="footer_icons"></div>
     <script src="index.js"></script>
+    </div>
   </body>
 </html>
