--- a/JavaScript/Git_vezba/index.html
+++ b/JavaScript/Git_vezba/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    Komande za GitHub
+    <center>
+      <h1>Komande za GitHub</h1>
+      <br />
+      <h2>
+        init clone <br />
+        add status diff commit notes restore reset rm mv <br />branch checkout
+        switch merge mergetool log stash tag worktree <br />fetch pull push
+        remote submodule <br />show log diff difftool range-diff shortlog
+        describe <br />
+        apply cherry-pick diff rebase revert <br />
+        bisect blame grep
+      </h2>
+    </center>
   </body>
 </html>
