--- a/JavaScript/Calculator/index.html
+++ b/JavaScript/Calculator/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div id="calculator">
-      <div id="input-wrap"></div>
+      <div id="input-wrap">
+        <!-- <div id="tmp"></div>
+        <div id="input"></div> -->
+      </div>
       <div id="button-wrap">
         <button class="number" id="all-clear">AC</button>
         <button class="number" id="clear">C</button>
