--- a/JavaScript/Calculator/index.html
+++ b/JavaScript/Calculator/index.html
@@ -17,24 +17,24 @@
         <button class="number" id="all-clear">AC</button>
         <button class="number" id="clear">C</button>
         <button class="number" id="sign">+/-</button>
-        <button class="number">/</button>
+        <button class="number" id="divine">/</button>
 
-        <button class="number">7</button>
-        <button class="number">8</button>
-        <button class="number">9</button>
-        <button class="number">*</button>
+        <button class="number" id="seven">7</button>
+        <button class="number" id="seven">8</button>
+        <button class="number" id="seven">9</button>
+        <button class="number" id="seven">*</button>
 
-        <button class="number">4</button>
-        <button class="number">5</button>
-        <button class="number">6</button>
-        <button class="number">-</button>
+        <button class="number" id="seven">4</button>
+        <button class="number" id="seven">5</button>
+        <button class="number" id="seven">6</button>
+        <button class="number" id="seven">-</button>
 
-        <button class="number">1</button>
-        <button class="number">2</button>
-        <button class="number">3</button>
-        <button class="number">+</button>
+        <button class="number" id="seven">1</button>
+        <button class="number" id="seven">2</button>
+        <button class="number" id="seven">3</button>
+        <button class="number" id="seven">+</button>
 
-        <button class="number">0</button>
+        <button class="number" id="seven">0</button>
         <button class="number" id="dot">.</button>
         <button class="number" id="result">=</button>
       </div>
