--- a/JavaScript/Calculator/index.html
+++ b/JavaScript/Calculator/index.html
@@ -20,9 +20,9 @@
         <button class="number" id="divine">/</button>
 
         <button class="number" id="seven">7</button>
-        <button class="number" id="seven">8</button>
-        <button class="number" id="seven">9</button>
-        <button class="number" id="seven">*</button>
+        <button class="number" id="eight">8</button>
+        <button class="number" id="nine">9</button>
+        <button class="number" id="times">*</button>
 
         <button class="number" id="seven">4</button>
         <button class="number" id="seven">5</button>
