--- a/JavaScript/Calculator/index.html
+++ b/JavaScript/Calculator/index.html
@@ -24,10 +24,10 @@
         <button class="number" id="nine">9</button>
         <button class="number" id="times">*</button>
 
-        <button class="number" id="seven">4</button>
-        <button class="number" id="seven">5</button>
-        <button class="number" id="seven">6</button>
-        <button class="number" id="seven">-</button>
+        <button class="number" id="four">4</button>
+        <button class="number" id="five">5</button>
+        <button class="number" id="six">6</button>
+        <button class="number" id="minus">-</button>
 
         <button class="number" id="seven">1</button>
         <button class="number" id="seven">2</button>
