--- a/JavaScript/Calculator/index.html
+++ b/JavaScript/Calculator/index.html
@@ -29,10 +29,10 @@
         <button class="number" id="six">6</button>
         <button class="number" id="minus">-</button>
 
-        <button class="number" id="seven">1</button>
-        <button class="number" id="seven">2</button>
-        <button class="number" id="seven">3</button>
-        <button class="number" id="seven">+</button>
+        <button class="number" id="one">1</button>
+        <button class="number" id="two">2</button>
+        <button class="number" id="tree">3</button>
+        <button class="number" id="plus">+</button>
 
         <button class="number" id="seven">0</button>
         <button class="number" id="dot">.</button>
