--- a/JavaScript/Calculator/index.html
+++ b/JavaScript/Calculator/index.html
@@ -34,7 +34,7 @@
         <button class="number" id="tree">3</button>
         <button class="number" id="plus">+</button>
 
-        <button class="number" id="seven">0</button>
+        <button class="number" id="zero">0</button>
         <button class="number" id="dot">.</button>
         <button class="number" id="result">=</button>
       </div>
