--- a/JavaScript/Calculator/index.html
+++ b/JavaScript/Calculator/index.html
@@ -14,29 +14,29 @@
         <div id="input"></div> -->
       </div>
       <div id="button-wrap">
-        <button class="number" id="all-clear">AC</button>
-        <button class="number" id="clear">C</button>
-        <button class="number" id="sign">+/-</button>
-        <button class="number" id="divine">/</button>
+        <button class="numbers" id="all-clear">AC</button>
+        <button class="numbers" id="clear">C</button>
+        <button class="numbers" id="sign">+/-</button>
+        <button class="numbers" id="divine">/</button>
 
-        <button class="number" id="seven">7</button>
-        <button class="number" id="eight">8</button>
-        <button class="number" id="nine">9</button>
-        <button class="number" id="times">*</button>
+        <button class="numbers" id="seven">7</button>
+        <button class="numbers" id="eight">8</button>
+        <button class="numbers" id="nine">9</button>
+        <button class="numbers" id="times">*</button>
 
-        <button class="number" id="four">4</button>
-        <button class="number" id="five">5</button>
-        <button class="number" id="six">6</button>
-        <button class="number" id="minus">-</button>
+        <button class="numbers" id="four">4</button>
+        <button class="numbers" id="five">5</button>
+        <button class="numbers" id="six">6</button>
+        <button class="numbers" id="minus">-</button>
 
-        <button class="number" id="one">1</button>
-        <button class="number" id="two">2</button>
-        <button class="number" id="tree">3</button>
-        <button class="number" id="plus">+</button>
+        <button class="numbers" id="one">1</button>
+        <button class="numbers" id="two">2</button>
+        <button class="numbers" id="tree">3</button>
+        <button class="numbers" id="plus">+</button>
 
-        <button class="number" id="zero">0</button>
-        <button class="number" id="dot">.</button>
-        <button class="number" id="result">=</button>
+        <button class="numbers" id="zero">0</button>
+        <button class="numbers" id="dot">.</button>
+        <button class="numbers" id="result">=</button>
       </div>
     </div>
 
