--- a/JavaScript/Calculator/index.html
+++ b/JavaScript/Calculator/index.html
@@ -9,10 +9,7 @@
   </head>
   <body>
     <div id="calculator">
-      <div id="input-wrap">
-        <!-- <div id="tmp"></div>
-        <div id="input"></div> -->
-      </div>
+      <div id="input-wrap"></div>
       <div id="button-wrap">
         <button class="numbers" id="all-clear">AC</button>
         <button class="numbers" id="clear">C</button>
