--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -8,6 +8,8 @@
     <title>CALENDAR</title>
   </head>
   <body>
+    <div class="kalendar">
+        <div class="zaglavlje">
     <script src="index.js"></script>
   </body>
 </html>
