--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -10,6 +10,8 @@
   <body>
     <div class="kalendar">
         <div class="zaglavlje">
+            <button id="prethodniMjesec">&#8249;</button>
+        <h1 id="naslov"></h1>
     <script src="index.js"></script>
   </body>
 </html>
