--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -12,6 +12,7 @@
         <div class="zaglavlje">
             <button id="prethodniMjesec">&#8249;</button>
         <h1 id="naslov"></h1>
+        <button id="sljedeciMjesec">&#8250;</button>
     <script src="index.js"></script>
   </body>
 </html>
