--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -10,9 +10,10 @@
   <body>
     <div class="kalendar">
         <div class="zaglavlje">
-            <button id="prethodniMjesec">&#8249;</button>
-        <h1 id="naslov"></h1>
-        <button id="sljedeciMjesec">&#8250;</button>
+          <button id="prethodniMjesec">&#8249;</button>
+          <h1 id="naslov"></h1>
+          <button id="sljedeciMjesec">&#8250;</button>
+        </div>
     <script src="index.js"></script>
   </body>
 </html>
