--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -14,6 +14,9 @@
           <h1 id="naslov"></h1>
           <button id="sljedeciMjesec">&#8250;</button>
         </div>
+        <table>
+            <thead>
+              <tr>
     <script src="index.js"></script>
   </body>
 </html>
