--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -17,6 +17,14 @@
         <table>
             <thead>
               <tr>
+                <th>Ned</th>
+            <th>Pon</th>
+            <th>Uto</th>
+            <th>Sri</th>
+            <th>Čet</th>
+            <th>Pet</th>
+            <th>Sub</th>
+          </tr>
     <script src="index.js"></script>
   </body>
 </html>
