--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -25,6 +25,7 @@
             <th>Pet</th>
             <th>Sub</th>
           </tr>
+        </thead>
     <script src="index.js"></script>
   </body>
 </html>
