--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -26,6 +26,8 @@
             <th>Sub</th>
           </tr>
         </thead>
+        <tbody id="tijeloKalendar"></tbody>
+    </tbody>
     <script src="index.js"></script>
   </body>
 </html>
