--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -28,6 +28,7 @@
         </thead>
         <tbody id="tijeloKalendar"></tbody>
     </tbody>
+</table>
     <script src="index.js"></script>
   </body>
 </html>
