--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -29,6 +29,7 @@
         <tbody id="tijeloKalendar"></tbody>
     </tbody>
 </table>
+</div>
     <script src="index.js"></script>
   </body>
 </html>
