--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -26,7 +26,7 @@
             <th>Sub</th>
           </tr>
         </thead>
-        <tbody id="tijeloKalendar"></tbody>
+        <tbody id="calendar__body"></tbody>
       </table>
     </div>
     <script src="index.js"></script>
