--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -11,7 +11,7 @@
     <div class="kalendar">
       <div class="zaglavlje">
         <button id="prethodniMjesec">&#8249;</button>
-        <h1 id="naslov"></h1>
+        <h1 id="name"></h1>
         <button id="next__month">&#8250;</button>
       </div>
       <table>
