--- a/JavaScript/Calendar/index.html
+++ b/JavaScript/Calendar/index.html
@@ -8,9 +8,9 @@
     <title>CALENDAR</title>
   </head>
   <body>
-    <div class="kalendar">
-      <div class="zaglavlje">
-        <button id="prethodniMjesec">&#8249;</button>
+    <div class="calendar">
+      <div class="haed">
+        <button id="previous__month">&#8249;</button>
         <h1 id="name"></h1>
         <button id="next__month">&#8250;</button>
       </div>
