Sinchrone and Asinchrone JavaScript

--- a/JavaScript/21.Cas/index.html
+++ b/JavaScript/21.Cas/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <h1 style="text-align: center; padding-top: 15%; font-size: 50px">
+      Look at the console
+    </h1>
     <script src="app.js"></script>
   </body>
 </html>
