--- a/JavaScript/21.Cas/index.html
+++ b/JavaScript/21.Cas/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Asynchronous JavaScript</title>
   </head>
   <body>
     <h1 style="text-align: center; padding-top: 15%; font-size: 50px">
