--- a/JavaScript/22.Cas/index.html
+++ b/JavaScript/22.Cas/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <button id="buttonId">Get Posts</button>
     <div id="posts"></div>
     <script src="app.js"></script>
   </body>
